manifest/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloweb-backend
  labels:
    app: hello
spec:
  selector:
    app: hello
  ports:
  - port: 8080
    targetPort: 8080
